estimate_v2改良した いい感じ

--- a/notebooks/notebook2.ipynb
+++ b/notebooks/notebook2.ipynb
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from my_project.my_library.predict_polarity import PolarEstimator\n",
-    "from my_project.my_library import load_dictionary"
+    "from auto_polar.lib.predict_polarity import PolarEstimator, Dict1, Dict2\n",
+    "from auto_polar.lib import load_dictionary"
    ]
   },
   {
@@ -290,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "polar_estimator = PolarEstimator(dict1, dict2)"
+    "polar_estimator = PolarEstimator(Dict1(dict1), Dict2(dict2))"
    ]
   },
   {
@@ -302,16 +302,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text: 友達と映画を見に行ったけど、感動して泣いちゃった。\n",
+      "text: 雨が降ってるから気分が落ち込む。早く晴れてほしいな。\n",
       "\n",
-      "[dict1]  友達 1\n",
-      "[dict1]  感動 1\n"
+      "[dict1]  雨 0\n",
+      "[dict1]  気分 0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2"
+       "0"
       ]
      },
      "execution_count": 10,
@@ -320,7 +320,7 @@
     }
    ],
    "source": [
-    "polar_estimator.estimate_v1(inputs[1], verbose=True)"
+    "polar_estimator.estimate_v1(inputs[0], verbose=True)"
    ]
   },
   {
@@ -332,11 +332,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text: 新しい仕事が始まって緊張するけど、頑張りたい。\n",
+      "text: 雨が降ってるから気分が落ち込む。早く晴れてほしいな。\n",
       "\n",
-      "[dict1]  仕事 0\n",
-      "[dict1]  緊張 -1\n",
-      "[dict2]  ['頑張る'] 1\n"
+      "[dict1]  雨 0\n",
+      "[dict1]  気分 0\n",
+      "[dict2]  ['落ち込む'] -1\n",
+      "[dict2]  ['晴れる'] 1\n"
      ]
     },
     {
@@ -351,7 +352,7 @@
     }
    ],
    "source": [
-    "polar_estimator.estimate_v2(inputs[2], verbose=True)"
+    "polar_estimator.estimate_v2(inputs[0], verbose=True)"
    ]
   },
   {
@@ -1173,8 +1174,9 @@
       "\n",
       "[dict1]  雨 0\n",
       "[dict1]  気分 0\n",
+      "[dict2]  ['落ち込む'] -1\n",
       "[dict2]  ['晴れる'] 1\n",
-      "1\n",
+      "0\n",
       "\n",
       "text: 友達と映画を見に行ったけど、感動して泣いちゃった。\n",
       "\n",
@@ -1201,13 +1203,7 @@
       "[dict1]  ペット 0\n",
       "[dict1]  病気 -1\n",
       "[dict1]  心配 -1\n",
-      "[dict1]  元気 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[dict1]  元気 1\n",
       "-1\n",
       "\n",
       "text: 家族と一緒に過ごす時間がとても楽しかった。\n",
@@ -1272,7 +1268,8 @@
       "\n",
       "[dict1]  大好き 1\n",
       "[dict1]  気分 0\n",
-      "1\n",
+      "[dict2]  ['明るい'] 1\n",
+      "2\n",
       "\n",
       "text: 試験の結果が悪くて、落ち込んでしまった。\n",
       "\n",
@@ -1563,7 +1560,8 @@
       "text: プレゼントをもらって、心が温まった。\n",
       "\n",
       "[dict1]  プレゼント 1\n",
-      "1\n",
+      "[dict2]  ['温まる'] 1\n",
+      "2\n",
       "\n",
       "text: 好きなアーティストのコンサートが楽しみ。\n",
       "\n",
@@ -1580,8 +1578,7 @@
       "text: 体調が良くなくて、会社を休んだ。\n",
       "\n",
       "[dict2]  ['良い'] 1\n",
-      "[dict2]  ['良い', 'ない'] -1\n",
-      "0\n",
+      "1\n",
       "\n",
       "text: 新しい料理に挑戦して、上手くできた。\n",
       "\n",
@@ -1851,14 +1848,14 @@
       "text: 体調が良くなくて、会社を休んだ。\n",
       "\n",
       "[dict2]  ['良い'] 1\n",
-      "[dict2]  ['良い', 'ない'] -1\n",
-      "0\n",
+      "1\n",
       "\n",
       "text: 好きな音楽を聴くと気分が明るくなる。\n",
       "\n",
       "[dict1]  好き 1\n",
       "[dict1]  気分 0\n",
-      "1\n",
+      "[dict2]  ['明るい'] 1\n",
+      "2\n",
       "\n",
       "text: 友達と映画を見に行ったけど、感動して泣いちゃった。\n",
       "\n",
@@ -2053,6 +2050,35 @@
     "for text in inputs:\n",
     "    print(polar_estimator.estimate_v2(text, verbose=True))\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "text: 電車が遅れてイライラするけど、仕方がない。\n",
+      "[dict2]  ['遅れる'] -1\n",
+      "[dict2]  ['仕方', 'が', 'ない'] -1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "polar_estimator.estimate_v2(\"電車が遅れてイライラするけど、仕方がない。\", verbose=True)"
    ]
   },
   {
