カタカナ単語をひらがなに変換して再度クエリするようにした 性能向上！

--- a/notebooks/notebook2.ipynb
+++ b/notebooks/notebook2.ipynb
@@ -1224,7 +1224,8 @@
       "\n",
       "[dict1]  旅行 1\n",
       "[dict1]  一番 1\n",
-      "2\n",
+      "[dict2]  ['わくわく'] 1\n",
+      "3\n",
       "\n",
       "text: 久しぶりに会った友達と話して、元気が出た。\n",
       "\n",
@@ -1641,7 +1642,8 @@
       "\n",
       "[dict1]  好き 1\n",
       "[dict1]  新作 0\n",
-      "1\n",
+      "[dict2]  ['わくわく'] 1\n",
+      "2\n",
       "\n",
       "text: 体調が悪くて、早退した。\n",
       "\n",
@@ -1664,7 +1666,8 @@
       "\n",
       "text: 新しい靴を買って、ウキウキしている。\n",
       "\n",
-      "0\n",
+      "[dict2]  ['うきうき'] 1\n",
+      "1\n",
       "\n",
       "text: 恋人との記念日を祝って、幸せな時間を過ごした。\n",
       "\n",
@@ -2009,7 +2012,8 @@
       "\n",
       "[dict1]  旅行 1\n",
       "[dict1]  一番 1\n",
-      "2\n",
+      "[dict2]  ['わくわく'] 1\n",
+      "3\n",
       "\n",
       "text: 試合に勝って、チーム全員で喜んだ。\n",
       "\n",
