implemented denial and conjugation

--- a/notebooks/notebook2.ipynb
+++ b/notebooks/notebook2.ipynb
@@ -180,8 +180,8 @@
        "a          4\n",
        "o          3\n",
        "?p         2\n",
-       "　          1\n",
        "?p?e       1\n",
+       "　          1\n",
        "Name: count, dtype: int64"
       ]
      },
@@ -2065,15 +2065,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "text: 電車が遅れてイライラするけど、仕方がない。\n",
+      "電車\t名詞,一般,*,*,*,*,電車,デンシャ,デンシャ 名詞\n",
+      "が\t助詞,格助詞,一般,*,*,*,が,ガ,ガ 助詞\n",
+      "遅れ\t動詞,自立,*,*,一段,連用形,遅れる,オクレ,オクレ 動詞\n",
+      "て\t助詞,接続助詞,*,*,*,*,て,テ,テ 助詞\n",
+      "イライラ\t副詞,助詞類接続,*,*,*,*,イライラ,イライラ,イライラ 副詞\n",
+      "する\t動詞,自立,*,*,サ変・スル,基本形,する,スル,スル 動詞\n",
+      "けど\t助詞,接続助詞,*,*,*,*,けど,ケド,ケド 助詞\n",
+      "h\n",
+      "text: 電車が遅れてイライラする\n",
       "[dict2]  ['遅れる'] -1\n",
-      "[dict2]  ['仕方', 'が', 'ない'] -1\n"
+      "[e_v3]\"電車が遅れてイライラする\":-1\n",
+      "[e_v4]\"電車が遅れてイライラする\":-1*\"けど\":-1\n",
+      "、\t記号,読点,*,*,*,*,、,、,、 記号\n",
+      "仕方\t名詞,ナイ形容詞語幹,*,*,*,*,仕方,シカタ,シカタ 名詞\n",
+      "が\t助詞,格助詞,一般,*,*,*,が,ガ,ガ 助詞\n",
+      "ない\t形容詞,自立,*,*,形容詞・アウオ段,基本形,ない,ナイ,ナイ 形容詞\n",
+      "。\t記号,句点,*,*,*,*,。,。,。 記号\n",
+      "text: けど、仕方がない。\n",
+      "[dict2]  ['仕方', 'が', 'ない'] -1\n",
+      "[e_v3]\"けど、仕方がない。\":-1\n",
+      "[e_v4]\"けど、仕方がない。\":-1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-2"
+       "0"
       ]
      },
      "execution_count": 14,
@@ -2082,7 +2100,7 @@
     }
    ],
    "source": [
-    "polar_estimator.estimate_v2(\"電車が遅れてイライラするけど、仕方がない。\", verbose=True)"
+    "polar_estimator.estimate_v4(\"電車が遅れてイライラするけど、仕方がない。\", verbose=True)"
    ]
   },
   {
