application for double

--- a/notebooks/notebook2.ipynb
+++ b/notebooks/notebook2.ipynb
@@ -2092,7 +2092,7 @@
     {
      "data": {
       "text/plain": [
-       "-2"
+       "-1.5"
       ]
      },
      "execution_count": 14,
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2166,7 +2166,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 泣いちゃった。\n",
       "[e_v4]\"泣いちゃった。\":0\n",
-      "evaluated score: -1 , ans: 1\n",
+      "evaluated score: -0.5 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['n', 'ペットが病気になって心配でたまらない。早く元気になって。']\n",
@@ -2199,7 +2199,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 。\n",
       "[e_v4]\"。\":0\n",
-      "evaluated score: 1 , ans: -1\n",
+      "evaluated score: 0.5 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['n', '仕事でミスをして上司に叱られてしまった。反省しないと。']\n",
@@ -2237,7 +2237,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 。\n",
       "[e_v4]\"。\":0\n",
-      "evaluated score: 0 , ans: -1\n",
+      "evaluated score: 0.0 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['p', '今日も一日がんばった。自分を褒めたい気分。']\n",
@@ -2281,7 +2281,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: しまう。\n",
       "[e_v4]\"しまう。\":0\n",
-      "evaluated score: 0 , ans: -1\n",
+      "evaluated score: 0.0 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['p', '彼女からのサプライズプレゼントに感動した。']\n",
@@ -2299,7 +2299,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: した。\n",
       "[e_v4]\"した。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['p', '久しぶりに休みが取れて、ゆっくり休むことができた。']\n",
@@ -2326,7 +2326,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 休むことができた。\n",
       "[e_v4]\"休むことができた。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['n', '友達と喧嘩してしまって、悲しい気持ちになった。']\n",
@@ -2356,7 +2356,7 @@
       "[dict1]  気持ち 1\n",
       "[dict2]  ['悲しい'] -1\n",
       "[e_v4]\"、悲しい気持ちになった。\":0\n",
-      "evaluated score: 1 , ans: -1\n",
+      "evaluated score: 0.5 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['p', '新しい洋服を買って、気分が上がった。']\n",
@@ -2377,7 +2377,7 @@
       "text: 、気分が上がった。\n",
       "[dict1]  気分 0\n",
       "[e_v4]\"、気分が上がった。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['e', '今日は特に何もない一日だったけど、それも悪くない。']\n",
@@ -2404,7 +2404,7 @@
       "text: 、それも悪くない。\n",
       "[dict2]  ['悪い'] -1\n",
       "[e_v4]\"、それも悪くない。\":-1\n",
-      "evaluated score: -1 , ans: 0\n",
+      "evaluated score: -1.0 , ans: 0\n",
       "↑\n",
       "↓\n",
       "['n', '失恋してからなかなか立ち直れない。']\n",
@@ -2425,7 +2425,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 立ち直れない。\n",
       "[e_v4]\"立ち直れない。\":0\n",
-      "evaluated score: 0 , ans: -1\n",
+      "evaluated score: 0.0 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['p', 'スポーツジムで体を動かして、スッキリした。']\n",
@@ -2449,7 +2449,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: した。\n",
       "[e_v4]\"した。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['p', '雨上がりの虹を見て、心が洗われるようだった。']\n",
@@ -2473,7 +2473,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 、心が洗われるようだった。\n",
       "[e_v4]\"、心が洗われるようだった。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['p', '今日は誕生日で、たくさんのメッセージをもらった。']\n",
@@ -2496,7 +2496,7 @@
       "text: 日で、たくさんのメッセージをもらった。\n",
       "[dict1]  たくさん 0\n",
       "[e_v4]\"日で、たくさんのメッセージをもらった。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['p', '久しぶりに母の手料理を食べて、懐かしい気分になった。']\n",
@@ -2522,7 +2522,7 @@
       "text: 、懐かしい気分になった。\n",
       "[dict1]  気分 0\n",
       "[e_v4]\"、懐かしい気分になった。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['p', '新しいゲームを始めて、ハマってしまった。']\n",
@@ -2545,7 +2545,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: しまった。\n",
       "[e_v4]\"しまった。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['p', '長い一日が終わって、ほっと一息ついた。']\n",
@@ -2566,7 +2566,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 、ほっと一息ついた。\n",
       "[e_v4]\"、ほっと一息ついた。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['p', '仕事が終わって家に帰ると、ホッとする。']\n",
@@ -2594,7 +2594,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: とする。\n",
       "[e_v4]\"とする。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['n', '親友と大喧嘩してしまって、後悔している。']\n",
@@ -2628,7 +2628,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: いる。\n",
       "[e_v4]\"いる。\":0\n",
-      "evaluated score: 1 , ans: -1\n",
+      "evaluated score: 0.5 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['n', '風が強くて、外に出るのが億劫だった。']\n",
@@ -2651,7 +2651,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 、外に出るのが億劫だった。\n",
       "[e_v4]\"、外に出るのが億劫だった。\":0\n",
-      "evaluated score: 0 , ans: -1\n",
+      "evaluated score: 0.0 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['p', '久しぶりに海に行って、リフレッシュできた。']\n",
@@ -2674,7 +2674,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: できた。\n",
       "[e_v4]\"できた。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['n', '体調が良くなくて、会社を休んだ。']\n",
@@ -2695,7 +2695,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 、会社を休んだ。\n",
       "[e_v4]\"、会社を休んだ。\":0\n",
-      "evaluated score: 1 , ans: -1\n",
+      "evaluated score: 0.5 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['n', '彼氏とケンカして、悲しい気持ちになった。']\n",
@@ -2720,7 +2720,7 @@
       "[dict1]  気持ち 1\n",
       "[dict2]  ['悲しい'] -1\n",
       "[e_v4]\"、悲しい気持ちになった。\":0\n",
-      "evaluated score: 0 , ans: -1\n",
+      "evaluated score: 0.0 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['e', '新しいカフェを見つけて、友達と行ってみた。']\n",
@@ -2745,7 +2745,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: みた。\n",
       "[e_v4]\"みた。\":0\n",
-      "evaluated score: 1 , ans: 0\n",
+      "evaluated score: 0.5 , ans: 0\n",
       "↑\n",
       "↓\n",
       "['p', 'お風呂にゆっくり浸かって、リラックスした。']\n",
@@ -2771,7 +2771,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: した。\n",
       "[e_v4]\"した。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['n', '彼女と喧嘩して、気まずい雰囲気になった。']\n",
@@ -2796,7 +2796,7 @@
       "[dict1]  雰囲気 1\n",
       "[dict2]  ['気まずい'] -1\n",
       "[e_v4]\"、気まずい雰囲気になった。\":0\n",
-      "evaluated score: 0 , ans: -1\n",
+      "evaluated score: 0.0 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['p', '新しい本を読み始めて、止まらなくなった。']\n",
@@ -2817,7 +2817,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 、止まらなくなった。\n",
       "[e_v4]\"、止まらなくなった。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['n', '仕事でミスをして、上司に叱られた。']\n",
@@ -2843,7 +2843,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 、上司に叱られた。\n",
       "[e_v4]\"、上司に叱られた。\":0\n",
-      "evaluated score: 0 , ans: -1\n",
+      "evaluated score: 0.0 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['p', '彼氏からのサプライズに感動した。']\n",
@@ -2861,7 +2861,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: した。\n",
       "[e_v4]\"した。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['n', '雨の日はどうしても気分が沈んでしまう。']\n",
@@ -2883,7 +2883,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: しまう。\n",
       "[e_v4]\"しまう。\":0\n",
-      "evaluated score: 0 , ans: -1\n",
+      "evaluated score: 0.0 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['n', '体調が良くなくて、会社を休んだ。']\n",
@@ -2904,7 +2904,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 、会社を休んだ。\n",
       "[e_v4]\"、会社を休んだ。\":0\n",
-      "evaluated score: 1 , ans: -1\n",
+      "evaluated score: 0.5 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['p', '友達と映画を見に行ったけど、感動して泣いちゃった。']\n",
@@ -2935,7 +2935,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 泣いちゃった。\n",
       "[e_v4]\"泣いちゃった。\":0\n",
-      "evaluated score: -1 , ans: 1\n",
+      "evaluated score: -0.5 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['p', '久しぶりに休みが取れて、ゆっくり休むことができた。']\n",
@@ -2962,7 +2962,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 休むことができた。\n",
       "[e_v4]\"休むことができた。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['n', '彼女と喧嘩して、気まずい雰囲気になった。']\n",
@@ -2987,7 +2987,7 @@
       "[dict1]  雰囲気 1\n",
       "[dict2]  ['気まずい'] -1\n",
       "[e_v4]\"、気まずい雰囲気になった。\":0\n",
-      "evaluated score: 0 , ans: -1\n",
+      "evaluated score: 0.0 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['p', '新しい本を読み始めて、止まらなくなった。']\n",
@@ -3008,7 +3008,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 、止まらなくなった。\n",
       "[e_v4]\"、止まらなくなった。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['n', 'ペットが病気になって心配でたまらない。早く元気になって。']\n",
@@ -3041,7 +3041,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: 。\n",
       "[e_v4]\"。\":0\n",
-      "evaluated score: 1 , ans: -1\n",
+      "evaluated score: 0.5 , ans: -1\n",
       "↑\n",
       "↓\n",
       "['p', '仕事が終わって家に帰ると、ホッとする。']\n",
@@ -3069,7 +3069,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: とする。\n",
       "[e_v4]\"とする。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['p', '今日は誕生日で、たくさんのメッセージをもらった。']\n",
@@ -3092,7 +3092,7 @@
       "text: 日で、たくさんのメッセージをもらった。\n",
       "[dict1]  たくさん 0\n",
       "[e_v4]\"日で、たくさんのメッセージをもらった。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "↓\n",
       "['e', '今日は特に何もない一日だったけど、それも悪くない。']\n",
@@ -3119,7 +3119,7 @@
       "text: 、それも悪くない。\n",
       "[dict2]  ['悪い'] -1\n",
       "[e_v4]\"、それも悪くない。\":-1\n",
-      "evaluated score: -1 , ans: 0\n",
+      "evaluated score: -1.0 , ans: 0\n",
       "↑\n",
       "↓\n",
       "['p', '新しいゲームを始めて、ハマってしまった。']\n",
@@ -3142,7 +3142,7 @@
       "。\t記号,句点,*,*,*,*,。,。,。\n",
       "text: しまった。\n",
       "[e_v4]\"しまった。\":0\n",
-      "evaluated score: 0 , ans: 1\n",
+      "evaluated score: 0.0 , ans: 1\n",
       "↑\n",
       "sum of number  of diffs: 40\n"
      ]
@@ -3158,7 +3158,7 @@
     "    if(pol_sign==0):\n",
     "        if(score!=0):\n",
     "            success=False\n",
-    "    elif(int(pol_sign)*int(score)<=0):\n",
+    "    elif(pol_sign*score<=0):\n",
     "        success=False\n",
     "    if not success:\n",
     "        count_diff+=1\n",
